After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776722 - gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying gles2
gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying g...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-02 17:02 UTC by Aurélien Zanelli
Modified: 2017-01-13 00:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying gles2 (1.36 KB, patch)
2017-01-02 17:02 UTC, Aurélien Zanelli
none Details | Review
gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying gles2 (1.41 KB, patch)
2017-01-02 17:04 UTC, Aurélien Zanelli
none Details | Review

Description Aurélien Zanelli 2017-01-02 17:02:58 UTC
Created attachment 342725 [details] [review]
gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying gles2

as we are not interested in error since we are trying multiple gles2 versions and it causes GError functions to complain:

(gst-launch-1.0:7674): GLib-WARNING **: GError set over the top of a previous GError or uninitialized memory.
This indicates a bug in someone's code. You must ensure an error is NULL before it's set.
The overwriting error message was: Failed to set window configuration: EGL_BAD_ATTRIBUTE.
Comment 1 Aurélien Zanelli 2017-01-02 17:04:31 UTC
Created attachment 342726 [details] [review]
gl/egl: don't pass a GError to gst_gl_context_egl_choose_config when trying gles2

Oops, I forgot to add the bugzilla id.
Comment 2 Matthew Waters (ystreet00) 2017-01-09 14:14:44 UTC
Thanks! Pushed a slightly different patch that logs the error.

commit d9f553bff50b15bd476c648926f5d2ae5cf30c72
Author: Matthew Waters <matthew@centricular.com>
Date:   Tue Jan 10 01:00:12 2017 +1100

    glcontext/egl: don't overwrite set GError
    
    Doing so is an error and will cause a glib warning to be printed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776722